# Concu

./: Cargo.toml  README.md  README.md.orig
2-practica-forkjoin/examples/: mergesort.rs  mergesort_ryon.rs
2-practica/2-practica-threads-locks/: ._.
2-practica/SmartPointers/: Cargo.toml
3-Locks-SmartPointers/2-practica-threads-locks/examples/: banquero.rs
ejemplo_libro/: Cargo.toml  README.md
ejemplo_libro/src/: main.rs
forkjoin/ForkJoin/channels_crossbeam/: Cargo.toml
forkjoin/ForkJoin/channels_crossbeam/ejemplo1/: main.rs
forkjoin/ForkJoin/channels_crossbeam/ejemplo2/: main.rs
forkjoin/ForkJoin/channels_crossbeam/ejemplo3/: main.rs
forkjoin/ForkJoin/channels_crossbeam/ejemplo4/: main.rs
forkjoin/ForkJoin/ejemplo2_rayon/: Cargo.toml
forkjoin/ForkJoin/ejemplo_rayon/: Cargo.toml
forkjoin/ForkJoin/scope_crossbeam/: Cargo.toml
locks-teorica/more_examples/: Cargo.toml  file.txt
locks-teorica/more_examples/src/: example1.rs  main.rs
src/: cliente.rs  lib.rs  main.rs
tarea/: Cargo.toml  README.md
tarea/Noah/: Cargo.toml
tarea/Noah/src/: main.rs
tarea/solucion_2/: main.rs
tarea/src/: README.md  api_response.rs  auth.rs  lib.rs  main.rs  print_api_response.rs  recursos.rs
teorica/: Cargo.toml
teorica/barrera/: Cargo.toml
teorica/barrera/ejemplo1/: main.rs
teorica/barrera/ejemplo4/: main.rs
teorica/barreras/: main.rs
teorica/ejemplo2/: main.rs
teorica/ejemplo3/: main.rs
