[package]
name = "teorica"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ejemplo1"
path = "ejemplo1/main.rs"

[[bin]]
name = "ejemplo2"
path = "ejemplo2/main.rs"

[[bin]]
name = "ejemplo3"
path = "ejemplo3/main.rs"

[[bin]]
name = "barreras"
path = "barreras/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
std-semaphore = "0.1"